@@ -41,6 +41,7 @@ Usage: $0 [OPTIONS] ...
   -h, --help              print this help, then exit
   --prefix=PREFIX         install toolchain in PREFIX
 			  [$ac_default_prefix]
+  --host=HOST             host on which the toolchain will run [BUILD]
   -j, --parallelism PARALLELISM  Pass PARALLELISM as -jPARALLELISM
                           to make invocations.
   --components=LIST       specify which components to build
@@ -93,6 +94,11 @@ do
       | --compone=* | --compon=* | --compo=* | --comp=* | --com=* \
       | --co=* | --c=*)
     components=$ac_optarg ;;
+
+  --host)
+    ac_prev=host ;;
+  --host=*)
+    host=$ac_optarg ;;
 
   -*) { echo "$as_me: error: unrecognized option: $ac_option
 Try \`$0 --help' for more information." >&2
@@ -181,6 +187,7 @@ build_binutils()
     cd binutils
     ${BASE_DIRECTORY}/binutils/configure \
 	--prefix=${PREFIX}      \
+	--host=${HOST}          \
 	--target=${TARGET}      \
 	--disable-nls
 
@@ -200,6 +207,8 @@ build_bootstrap_gcc()
 	--with-gnu-ld                  \
 	--with-gnu-as                  \
 	--target=${TARGET}             \
+	--build=${BUILD}               \
+	--host=${HOST}                 \
 	--prefix=${PREFIX}             \
 	--disable-threads              \
 	--disable-nls                  \
@@ -284,7 +293,9 @@ build_gcc()
 	--with-gcc                     \
 	--with-gnu-ld                  \
 	--with-gnu-as                  \
+	--build=${BUILD}               \
 	--target=${TARGET}             \
+	--host=${HOST}                 \
 	--prefix=${PREFIX}             \
 	--enable-threads=win32         \
 	--disable-nls                  \
@@ -471,6 +482,12 @@ done
 export TARGET="arm-mingw32ce"
 #export TARGET="arm-wince-mingw32ce"
 export BUILD=`sh ${BASE_DIRECTORY}/gcc/config.guess`
+if [ "x${host}" != "x" ]; then
+    export HOST="${host}"
+else
+    export HOST=${BUILD}
+fi
+
 export PATH=${PREFIX}/bin:${PATH}
 
 echo "Building mingw32ce:"
